syntax = "proto3";

package main;

option go_package = "./proto";

// 添加订单设置表
message AddOrderSettingReq {
  int64 id = 1; //
  int32 flash_order_overtime = 2; //秒杀订单超时关闭时间(分)
  int32 normal_order_overtime = 3; //正常订单超时时间(分)
  int32 confirm_overtime = 4; //发货后自动确认收货时间（天）
  int32 finish_overtime = 5; //自动完成交易时间，不能申请售后（天）
  int32 status = 6; //状态：0->禁用；1->启用
  int32 is_default = 7; //是否默认：0->否；1->是
  int32 comment_overtime = 8; //订单完成后自动好评时间（天）
}

message AddOrderSettingResp {
  string pong = 1;
}

// 删除订单设置表
message DeleteOrderSettingReq {
  repeated int64 ids = 1;
}

message DeleteOrderSettingResp {
  string pong = 1;
}

// 更新订单设置表
message UpdateOrderSettingReq {
  int64 id = 1; //
  int32 flash_order_overtime = 2; //秒杀订单超时关闭时间(分)
  int32 normal_order_overtime = 3; //正常订单超时时间(分)
  int32 confirm_overtime = 4; //发货后自动确认收货时间（天）
  int32 finish_overtime = 5; //自动完成交易时间，不能申请售后（天）
  int32 status = 6; //状态：0->禁用；1->启用
  int32 is_default = 7; //是否默认：0->否；1->是
  int32 comment_overtime = 8; //订单完成后自动好评时间（天）

}

message UpdateOrderSettingResp {
  string pong = 1;
}

// 更新订单设置表状态
message UpdateOrderSettingIsDefaultReq {
  int64 id = 1; //
  int32 is_default = 2; //是否默认：0->否；1->是

}
message UpdateOrderSettingStatusReq {

  repeated int64 ids = 5; //
  int32 status = 8; //状态：0->禁用；1->启用

}

message UpdateOrderSettingStatusResp {
  string pong = 1;
}

// 查询订单设置表详情
message QueryOrderSettingDetailReq {
  int64 id = 1;
}

message QueryOrderSettingDetailResp {
  int64 id = 1; //
  int32 flash_order_overtime = 2; //秒杀订单超时关闭时间(分)
  int32 normal_order_overtime = 3; //正常订单超时时间(分)
  int32 confirm_overtime = 4; //发货后自动确认收货时间（天）
  int32 finish_overtime = 5; //自动完成交易时间，不能申请售后（天）
  int32 status = 6; //状态：0->禁用；1->启用
  int32 is_default = 7; //是否默认：0->否；1->是
  int32 comment_overtime = 8; //订单完成后自动好评时间（天）

}

// 分页查询订单设置表列表
message QueryOrderSettingListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int32 status = 4; //状态：0->禁用；1->启用

}

message OrderSettingListData {
  int64 id = 1; //
  int32 flash_order_overtime = 2; //秒杀订单超时关闭时间(分)
  int32 normal_order_overtime = 3; //正常订单超时时间(分)
  int32 confirm_overtime = 4; //发货后自动确认收货时间（天）
  int32 finish_overtime = 5; //自动完成交易时间，不能申请售后（天）
  int32 status = 6; //状态：0->禁用；1->启用
  int32 is_default = 7; //是否默认：0->否；1->是
  int32 comment_overtime = 8; //订单完成后自动好评时间（天）

}

message QueryOrderSettingListResp {
  int64 total = 1;
  repeated  OrderSettingListData list = 2;
}

// 订单设置表
service OrderSettingService {
  // 添加订单设置表
  rpc AddOrderSetting(AddOrderSettingReq) returns (AddOrderSettingResp){}
  // 删除订单设置表
  rpc DeleteOrderSetting(DeleteOrderSettingReq) returns (DeleteOrderSettingResp){}
  // 更新订单设置表
  rpc UpdateOrderSetting(UpdateOrderSettingReq) returns (UpdateOrderSettingResp){}
  // 更新订单设置表是否为默认
  rpc UpdateOrderSettingIsDefault(UpdateOrderSettingIsDefaultReq) returns (UpdateOrderSettingStatusResp){}
  // 更新订单设置表状态
  rpc UpdateOrderSettingStatus(UpdateOrderSettingStatusReq) returns (UpdateOrderSettingStatusResp){}
  // 查询订单设置表详情
  rpc QueryOrderSettingDetail(QueryOrderSettingDetailReq) returns (QueryOrderSettingDetailResp){}
  // 查询订单设置表列表
  rpc QueryOrderSettingList(QueryOrderSettingListReq) returns (QueryOrderSettingListResp){}


}
