syntax = "proto3";

package main;

option go_package = "./proto";

// 添加字典数据
message AddDictItemReq {
  int64 id = 1; //字典数据id
  int32 dict_sort = 2; //字典排序
  string dict_label = 3; //字典标签
  string dict_value = 4; //字典键值
  string dict_type = 5; //字典类型
  string css_class = 6; //样式属性（其他样式扩展）
  string list_class = 7; //表格回显样式
  string is_default = 8; //是否默认（Y是 N否）
  int32 status = 9; //状态（0：停用，1:正常）
  string remark = 10; //备注
  string create_by = 11; //创建者
}

message AddDictItemResp {
  string pong = 1;
}

// 删除字典数据
message DeleteDictItemReq {
  repeated int64 ids = 1;
}

message DeleteDictItemResp {
  string pong = 1;
}

// 更新字典数据
message UpdateDictItemReq {
  int64 id = 1; //字典数据id
  int32 dict_sort = 2; //字典排序
  string dict_label = 3; //字典标签
  string dict_value = 4; //字典键值
  string dict_type = 5; //字典类型
  string css_class = 6; //样式属性（其他样式扩展）
  string list_class = 7; //表格回显样式
  string is_default = 8; //是否默认（Y是 N否）
  int32 status = 9; //状态（0：停用，1:正常）
  string remark = 10; //备注
  string update_by = 13; //更新者
}

message UpdateDictItemResp {
  string pong = 1;
}

// 更新字典数据状态
message UpdateDictItemStatusReq {
  repeated int64 ids = 1; //字典数据id
  int32 status = 2; //状态（0：停用，1:正常）
  string update_by = 3; //更新者
}

message UpdateDictItemStatusResp {
  string pong = 1;
}

// 查询字典数据详情
message QueryDictItemDetailReq {
  int64 id = 1;
}

message QueryDictItemDetailResp {
  int64 id = 1; //字典数据id
  int32 dict_sort = 2; //字典排序
  string dict_label = 3; //字典标签
  string dict_value = 4; //字典键值
  string dict_type = 5; //字典类型
  string css_class = 6; //样式属性（其他样式扩展）
  string list_class = 7; //表格回显样式
  string is_default = 8; //是否默认（Y是 N否）
  int32 status = 9; //状态（0：停用，1:正常）
  string remark = 10; //备注
  string create_by = 11; //创建者
  string create_time = 12; //创建时间
  string update_by = 13; //更新者
  string update_time = 14; //更新时间

}

// 分页查询字典数据列表
message QueryDictItemListReq {
  string dict_label = 1; //字典标签
  string dict_type = 2; //字典类型
  int32 status = 3; //状态（0：停用，1:正常）
  int64 page_num = 4; //第几页
  int64 page_size = 59; //每页的数量
}

message DictItemListData {
  int64 id = 1; //字典数据id
  int32 dict_sort = 2; //字典排序
  string dict_label = 3; //字典标签
  string dict_value = 4; //字典键值
  string dict_type = 5; //字典类型
  string css_class = 6; //样式属性（其他样式扩展）
  string list_class = 7; //表格回显样式
  string is_default = 8; //是否默认（Y是 N否）
  int32 status = 9; //状态（0：停用，1:正常）
  string remark = 10; //备注
  string create_by = 11; //创建者
  string create_time = 12; //创建时间
  string update_by = 13; //更新者
  string update_time = 14; //更新时间

}

message QueryDictItemListResp {
  int64 total = 1;
  repeated  DictItemListData list = 2;
}

// 字典数据
service DictItemService {
  // 添加字典数据
  rpc AddDictItem(AddDictItemReq) returns (AddDictItemResp){}
  // 删除字典数据
  rpc DeleteDictItem(DeleteDictItemReq) returns (DeleteDictItemResp){}
  // 更新字典数据
  rpc UpdateDictItem(UpdateDictItemReq) returns (UpdateDictItemResp ){}
  // 更新字典数据状态
  rpc UpdateDictItemStatus(UpdateDictItemStatusReq) returns (UpdateDictItemStatusResp ){}
  // 查询字典数据详情
  rpc QueryDictItemDetail(QueryDictItemDetailReq) returns (QueryDictItemDetailResp){}
  // 查询字典数据列表
  rpc QueryDictItemList(QueryDictItemListReq) returns (QueryDictItemListResp){}


}
